<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".tambahMotivasi.TambahMotivasi">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="269dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/surprised"
                android:id="@+id/imageView4"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/judul"
                android:ems="10"
                android:id="@+id/edt_judul"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine"
                android:maxLines="50"
                android:scrollbars="vertical"
                android:gravity="start|top"
                android:hint="@string/motivasi"
                android:id="@+id/edt_motivasi"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/penulis"
                android:ems="10"
                android:id="@+id/edt_penulis"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/tanggal"
                android:ems="10"
                android:id="@+id/edt_tanggal"/>
        <Button
                android:text="@string/tambahkan"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:id="@+id/btn_motivasi"
                android:background="@drawable/capsule2"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>