<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".signup.SignUpActivity">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout"
            tools:layout_editor_absoluteY="20dp"
            tools:layout_editor_absoluteX="20dp">

        <ImageView
                android:layout_width="287dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/senang"
                android:id="@+id/imageView3"/>

        <TextView
                android:text="@string/sign_up_to_continue"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                app:fontFamily="@font/chewy"
                android:paddingBottom="20dp"
                android:gravity="center"
                android:id="@+id/textView2"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteY="20dp"
                tools:layout_editor_absoluteX="20dp">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/name"
                        android:ems="10"
                        android:id="@+id/edt_nama_regis"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/username"
                        android:ems="10"
                        android:id="@+id/edt_username_regis"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:hint="@string/email"
                        android:id="@+id/edt_email_regis"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:hint="@string/password"
                        android:id="@+id/edt_pass_regis"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                    android:text="@string/permiss"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"/>

            <Button
                    android:text="@string/daftar"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:id="@+id/btn_signup"
                    android:layout_gravity="center"
                    android:background="@drawable/capsule2"
                    android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>





</android.support.constraint.ConstraintLayout>